--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ pyrebase4==4.8.0
 google-auth==2.35.0
 google-api-python-client==2.149.0
 pytest==8.3.3
+python-dotenv==1.0.1
+passlib[bcrypt]==1.7.4
+pydantic[email]==2.9.2
