--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,29 @@
 {
-    "name": "Frontend",
+    "name": "frontend",
+    "private": true,
     "version": "0.1.0",
+    "type": "module",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "test": "jest",
+      "cypress": "cypress open"
+    },
     "dependencies": {
-        "axios": "^1.3.5",
-        "firebase": "^9.19.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "^5.0.1"
+      "axios": "^1.7.7",
+      "bootstrap": "^5.3.3",
+      "firebase": "^10.13.2",
+      "react": "^18.3.1",
+      "react-bootstrap": "^2.10.4",
+      "react-dom": "^18.3.1",
+      "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
-        "@testing-library/react": "^14.0.0",
-        "cypress": "^12.9.0",
-        "jest": "^29.5.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "test": "jest",
-        "cypress": "cypress open"
+      "@testing-library/react": "^14.0.0",
+      "@vitejs/plugin-react": "^4.3.1",
+      "cypress": "^13.15.0",
+      "jest": "^29.5.0",
+      "vite": "^5.4.8"
     }
-}
+  }
