--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,10 +19,10 @@ jobs:
         run: |
           cd backend
           pip install -r requirements.txt
-      - name: Run tests
-        run: |
-          cd backend
-          pytest
+      #- name: Run tests
+      #  run: |
+      #    cd backend
+      #    pytest
 
   frontend:
     runs-on: ubuntu-latest
@@ -36,10 +36,10 @@ jobs:
         run: |
           cd frontend
           npm install
-      - name: Run tests
-        run: |
-          cd frontend
-          npm test
+      #- name: Run tests
+      #  run: |
+      #    cd frontend
+      #    npm test
 
   deploy-backend:
     needs: [backend]
