--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,6 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install Heroku CLI
+        run: |
+          curl https://cli-assets.heroku.com/install.sh | sh
       - name: Deploy to Heroku (Backend)
         uses: akhileshns/heroku-deploy@v3.14.15
         with:
@@ -65,6 +68,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "22"
+      - name: Install Heroku CLI
+        run: |
+          curl https://cli-assets.heroku.com/install.sh | sh
       - name: Generate .env file
         run: |
           cd frontend
