--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,10 +1,10 @@
-name: Pipeline Heroku
+name: Pipeline
 
 on:
   push:
-    branches: [none]
+    branches: [main]
   pull_request:
-    branches: [none]
+    branches: [main]
 
 jobs:
   backend:
@@ -19,10 +19,10 @@ jobs:
         run: |
           cd backend
           pip install -r requirements.txt
-      #- name: Run tests
-      #  run: |
-      #    cd backend
-      #    pytest
+      # - name: Run tests
+      #   run: |
+      #     cd backend
+      #     pytest
 
   frontend:
     runs-on: ubuntu-latest
@@ -35,11 +35,15 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          npm install
-      #- name: Run tests
-      #  run: |
-      #    cd frontend
-      #    npm test
+          npm ci
+      - name: Build
+        run: |
+          cd frontend
+          npm run build
+      # - name: Run tests
+      #   run: |
+      #     cd frontend
+      #     npm test
 
   deploy-backend:
     needs: [backend]
@@ -47,46 +51,53 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Heroku CLI
-        run: |
-          curl https://cli-assets.heroku.com/install.sh | sh
-      - name: Generate .env file
-        run: |
-          cd frontend
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
-      - name: Deploy to Heroku (Backend)
-        uses: akhileshns/heroku-deploy@v3.14.15
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_BACKEND_APP_NAME }}
-          heroku_email: "2105905@ucc.edu.ar"
-          appdir: "backend"
-
-  deploy-frontend:
-    needs: [frontend]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "22"
-      - name: Install Heroku CLI
-        run: |
-          curl https://cli-assets.heroku.com/install.sh | sh
-      - name: Generate .env file
-        run: |
-          cd frontend
-          echo "VITE_API_URL=${{ secrets.HEROKU_BACKEND_URL }}" > .env
+          python-version: "3.13.3"
       - name: Install dependencies
         run: |
-          cd frontend
-          npm install
-      - name: Deploy to Heroku (Frontend)
-        uses: akhileshns/heroku-deploy@v3.14.15
+          cd backend
+          pip install -r requirements.txt
+      - name: Generate .env file
+        run: |
+          cd backend
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
+      - name: Deploy to App Engine
+        uses: google-github-actions/setup-gcloud@v1
         with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_FRONTEND_APP_NAME }}
-          heroku_email: "2105905@ucc.edu.ar"
-          appdir: "frontend"
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: mantenimiento-project
+      - run: |
+          cd backend
+          gcloud app deploy app.yaml --quiet
+
+  #deploy-frontend:
+  #  needs: [frontend]
+  #  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - name: Set up Node.js
+  #      uses: actions/setup-node@v3
+  #      with:
+  #        node-version: "22"
+  #    - name: Install dependencies
+  #      run: |
+  #        cd frontend
+  #        npm ci
+  #    - name: Generate .env file
+  #      run: |
+  #        cd frontend
+  #        echo "VITE_API_URL=${{ secrets.API_URL }}" > .env
+  #    - name: Build
+  #      run: |
+  #        cd frontend
+  #        npm run build
+  #    - name: Deploy to Firebase Hosting
+  #      uses: FirebaseExtended/action-hosting-deploy@v0
+  #      with:
+  #        repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #        firebaseServiceAccount: '${{ secrets.FIREBASE_TOKEN }}'
+  #        channelId: live
+  #        projectId: mantenimiento-project
