--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,12 +63,16 @@ jobs:
         run: |
           cd backend
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
-      - name: Deploy to App Engine
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v2
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: mantenimiento-project
-      - run: |
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: massive-physics-453901-s4
+      - name: Deploy to App Engine
+        run: |
           cd backend
           gcloud app deploy app.yaml --quiet
 
