--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,8 +1,8 @@
 runtime: python39
 instance_class: F1
 
-manual_scaling: 
-  instances: 1
+automatic_scaling:
+  max_instances: 1
 
 handlers:
 - url: /.*
