--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -4,6 +4,4 @@ instance_class: F1
 automatic_scaling:
   max_instances: 1
 
-handlers:
-- url: /.*
-  script: auto
+entrypoint: gunicorn -b :$PORT main:app
