--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
 VITE_API_URL=http://localhost:8000
+VITE_FIREBASE_API_KEY=AIzaSyCfCip81COg2TK4FxGdNXGrG1njTLf6m_E
+VITE_FIREBASE_DATABASE_URL=https://proyecto-inversur-default-rtdb.firebaseio.com
+VITE_FIREBASE_AUTH_DOMAIN=proyecto-inversur.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=proyecto-inversur
+VITE_FIREBASE_STORAGE_BUCKET=proyecto-inversur.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=212242094333
+VITE_FIREBASE_APP_ID=1:212242094333:web:7f4b0804feab71eeb4c694
