--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+FRONTEND_URL=http://localhost:5173
 GOOGLE_SHEETS_CREDENTIALS=your_credentials_json
 GOOGLE_CLOUD_STORAGE_BUCKET=your_bucket_name
