--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -130,8 +130,7 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'student-fastapi-app'
-          slot-name: 'production'
+          app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
 
   deploy-frontend:
