--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,6 +101,14 @@ jobs:
           name: backend-artifact
           path: backend/
 
+      # Mover los archivos de backend/src/ a la raíz
+      - name: Move Files to Root
+        run: |
+          mv backend/src/* .
+          mv backend/.env .
+          rm -rf backend/
+          ls -R .
+
       # Desplegar el backend en Azure App Service usando el perfil de publicación
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
