--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,8 +34,15 @@ jobs:
       # Generar archivo env.config para el backend
       - name: Create Backend Environment File
         run: |
+          pwd
+          ls -la
+          cd backend
+          pwd
+          ls -la
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> env.config
+          ls -la
+          cat env.config || echo "Failed to create or read env.config file"
 
       # Verificar el contenido del directorio backend/ antes de subir el artefacto
       - name: Debug Backend Directory Contents Before Upload
