--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -103,14 +103,33 @@ jobs:
           name: backend-artifact
           path: backend/
 
-      ## Mover los archivos de backend/src/ a la raíz
-      #- name: Move Files to Root
-      #  run: |
-      #    mv backend/src/* .
-      #    mv backend/env.config .
-      #    rm -rf backend/
-      #    ls -R .
-      #    ls -la .
+      # Configurar Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      # Instalar dependencias
+      - name: Install Backend Dependencies
+        run: |
+          cd backend
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Verificar paquetes instalados
+      - name: Verify Installed Packages
+        run: |
+          cd backend
+          pip list
+
+      # Crear startup.sh
+      - name: Create Startup Script
+        run: |
+          echo '#!/bin/bash' > backend/startup.sh
+          echo 'cd backend' >> backend/startup.sh
+          echo 'gunicorn -w 4 -k uvicorn.workers.UvicornWorker src.main:app --bind 0.0.0.0:$PORT' >> backend/startup.sh
+          chmod +x backend/startup.sh
+          cat backend/startup.sh
 
       # Desplegar el backend en Azure App Service usando el perfil de publicación
       - name: Deploy to Azure App Service
