--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Pipeline
 on:
   push:
     branches:
-      - none
+      - SinLogin
 
 jobs:
   build-and-test-backend:
@@ -38,6 +38,9 @@ jobs:
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> env.config
           cat env.config || echo "Failed to create or read env.config file"
+      
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       # Guardar el directorio backend como artefacto para el despliegue
       - name: Upload Backend Artifact
@@ -45,8 +48,7 @@ jobs:
         with:
           name: backend-artifact
           path: |
-            backend/
-          if-no-files-found: error  # Falla si no se encuentran archivos
+            release.zip
 
   build-and-test-frontend:
     runs-on: ubuntu-latest
@@ -101,35 +103,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifact
-          path: backend/
 
-      # Configurar Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      # Instalar dependencias
-      - name: Install Backend Dependencies
-        run: |
-          cd backend
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Verificar paquetes instalados
-      - name: Verify Installed Packages
-        run: |
-          cd backend
-          pip list
-
-      # Crear startup.sh
-      - name: Create Startup Script
-        run: |
-          echo '#!/bin/bash' > backend/startup.sh
-          echo 'cd backend' >> backend/startup.sh
-          echo 'gunicorn -w 4 -k uvicorn.workers.UvicornWorker src.main:app --bind 0.0.0.0:$PORT' >> backend/startup.sh
-          chmod +x backend/startup.sh
-          cat backend/startup.sh
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
       # Desplegar el backend en Azure App Service usando el perfil de publicación
       - name: Deploy to Azure App Service
