--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -118,7 +118,7 @@ jobs:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
         env: 
-          POST_BUILD_COMMAND: /dsvm/tools/python/3.12/bin/pip install -r requirements.txt
+          POST_BUILD_COMMAND: /usr/bin/pip3.9 install -r requirements.txt
 
   deploy-frontend:
     needs: build-and-test-frontend
