--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -110,6 +110,18 @@ jobs:
       - name: Debug - List Files in Root Before Deployment
         run: |
           ls -R -la
+      
+      # Configurar Python para el backend FastAPI
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      # Instalar dependencias
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       # Desplegar el backend en Azure App Service usando el perfil de publicación
       - name: Deploy to Azure App Service
@@ -117,8 +129,6 @@ jobs:
         with:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
-        env: 
-          POST_BUILD_COMMAND: /usr/bin/pip3.9 install -r requirements.txt
 
   deploy-frontend:
     needs: build-and-test-frontend
