--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -123,6 +123,8 @@ jobs:
         with:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
+        env:
+          POST_BUILD_COMMAND: /opt/python/3.12.9/bin/pip install -r requirements.txt
 
   deploy-frontend:
     needs: build-and-test-frontend
