--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,11 +17,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-
+      
       # Instalar dependencias
-      - name: Install Backend Dependencies
+      - name: Create and activate virtual environment
         run: |
           cd backend/src
+          python -m venv venv
+          source venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -90,6 +92,23 @@ jobs:
           path: frontend/dist/
           if-no-files-found: error  # Falla si no se encuentran archivos
 
+  #deploy-backend:
+  #  needs: build-and-test-backend
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    # Descargar el artefacto del backend
+  #    - name: Download Backend Artifact
+  #      uses: actions/download-artifact@v4
+  #      with:
+  #        name: backend-artifact
+#
+  #    # Desplegar el backend en Azure App Service usando el perfil de publicación
+  #    - name: Deploy to Azure App Service
+  #      uses: azure/webapps-deploy@v2
+  #      with:
+  #        app-name: 'Inversur-QA'
+  #        publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
+
   deploy-backend:
     needs: build-and-test-backend
     runs-on: ubuntu-latest
@@ -99,32 +118,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifact
+          path: backend/src
       
-      ## Verificar el contenido del directorio raíz antes del despliegue
-      #- name: Debug - List Files in Root Before Deployment
-      #  run: |
-      #    ls -R -la
-      #
-      ## Configurar Python para el backend FastAPI
-      #- name: Set up Python
-      #  uses: actions/setup-python@v5
-      #  with:
-      #    python-version: '3.12'
-#
-      ## Instalar dependencias
-      #- name: Install Dependencies
-      #  run: |
-      #    python -m pip install --upgrade pip
-      #    pip install -r requirements.txt
-
       # Desplegar el backend en Azure App Service usando el perfil de publicación
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
-        env:
-          POST_BUILD_COMMAND: /opt/python/3.12.9/bin/pip install -r requirements.txt
+          package: backend/src
 
   deploy-frontend:
     needs: build-and-test-frontend
