--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,11 @@ jobs:
           source venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
+      - name: Check virtual environment size
+        run: |
+          cd backend/src
+          du -sh venv
 
       ## Ejecutar pruebas del backend (ajusta según tu configuración de pruebas)
       #- name: Run Backend Tests
