--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,11 +20,14 @@ jobs:
       
       - name: Create and start virtual environment
         run: |
+          cd backend/src
           python -m venv venv
           source venv/bin/activate
         
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          cd backend/src
+          pip install -r requirements.txt
       
       - name: Check virtual environment size
         run: |
